adding in extra info.

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -67,6 +67,12 @@
               'frameborder': 0
             }));
         });
+        // Show movie details
+        $(document).on('hover', '.movie-tile', function (event){
+            console.log(event);
+            $("#movie-details-container").empty().append( "moo" );
+        });
+
         // Animate in the movies when the page loads
         $(document).ready(function () {
           $('.movie-tile').hide().first().show("fast", function showNext() {
